# Project-KAPE

./: README.md
assets/simulations/debug/: config.txt
assets/simulations/default/: config.txt
assets/simulations/path_check 2/: config.txt
assets/simulations/path_optimization/: config.txt
sources/: CMakeLists.txt  anthill.cpp  anthill.hpp  ants.cpp  ants.hpp  ants.t.cpp  colony.cpp  drawing.cpp  drawing.hpp  environment.cpp  environment.hpp  environment.t.cpp  food.cpp  food.hpp  geometry.cpp  geometry.hpp  geometry.t.cpp  logger.cpp  logger.hpp  main.cpp  map.hpp  pheromones.cpp  pheromones.hpp  simulation.cpp  simulation.hpp
